feature: add web event
