# swagger/swagger.yaml
@@ -437,7 +437,24 @@ definitions:
 info:
   contact: {}
 paths:
-  /api/v1/events/{event}/subjects/{subject}:
+  /api/v1/events/{event}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: event
+        in: path
+        name: event
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+      summary: List Subjects
+      tags:
+      - Event
     post:
       consumes:
       - application/json
@@ -1057,24 +1074,6 @@ paths:
       summary: Get Task
       tags:
       - Tasks
-  /api/v1/subjects/{subject}:
-    get:
-      consumes:
-      - application/json
-      parameters:
-      - description: subject
-        in: path
-        name: subject
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-      summary: List Subjects
-      tags:
-      - Event
   /api/v1/summary:
     get:
       consumes:
